Bug #11123
libeti: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../common/driver.c: In function 'menu_driver': ../common/driver.c:156:25: error: comparison between pointer and integer [-Werror] if (IthPattern(m, 0) != NULL) { ^~ In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/time_iso.h:49:0, from /code/illumos-gate/proto/root_i386/usr/include/time.h:40, from /code/illumos-gate/proto/root_i386/usr/include/sys/time.h:462, from /code/illumos-gate/proto/root_i386/usr/include/sys/select.h:53, from /code/illumos-gate/proto/root_i386/usr/include/sys/types.h:640, from ../common/driver.c:35: /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:32:14: error: passing argument 2 of '_match' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../common/driver.c:157:21: note: in expansion of macro 'NULL' ret = _match(m, NULL, ¤t); ^~~~ In file included from ../common/driver.c:36:0: ../inc/private.h:164:13: note: expected 'char' but argument is of type 'void *' extern int _match(MENU *, char, ITEM **); ^~~~~~ ../common/driver.c:180:25: error: comparison between pointer and integer [-Werror] if (IthPattern(m, 0) != NULL) { ^~
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 03d5549b0a65247d3749887869b20aeeae3eb5e6
commit 03d5549b0a65247d3749887869b20aeeae3eb5e6 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-03T05:59:44.000Z 11123 libeti: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>